force-app/main/default/objects/Comment__c/Comment__c.object-meta.xml
<CustomObject>
    <description>This object stores the value of the Case/Task Comments</description>
    <label>Comment</label>
    <nameField>
        <displayFormat>C{0000}</displayFormat>
        <label>Comments Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Comments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>