force-app/main/default/objects/Comment__c/fields/Acorn_SUser_ID__c.field-meta.xml
<CustomField>
    <fullName>Acorn_SUser_ID__c</fullName>
    <label>Acorn SUser ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>