force-app/main/default/objects/Comment__c/fields/Acorn_Tracking_Number__c.field-meta.xml
<CustomField>
    <fullName>Acorn_Tracking_Number__c</fullName>
    <description>this field is updated from case tracking number</description>
    <label>Acorn Tracking Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>