force-app/main/default/objects/Comment__c/fields/Acorn_Work_Order_Number_to_Acorn__c.field-meta.xml
<CustomField>
    <fullName>Acorn_Work_Order_Number_to_Acorn__c</fullName>
    <description>Holds the value of the Acorn work order number</description>
    <label>Acorn Work Order Number to Acorn</label>
    <length>20</length>
    <type>Text</type>
</CustomField>