force-app/main/default/objects/Comment__c/fields/Communication_Channel_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Communication_Channel_Type_Name__c</fullName>
    <label>Communication Channel Type Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>