force-app/main/default/objects/Comment__c/fields/Communication_Log_Id__c.field-meta.xml
<CustomField>
    <fullName>Communication_Log_Id__c</fullName>
    <label>Communication Log Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>