force-app/main/default/objects/Comment__c/fields/is_Log__c.field-meta.xml
<CustomField>
    <fullName>is_Log__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Log</label>
    <type>Checkbox</type>
</CustomField>