force-app/main/default/objects/Comment__c/fields/Related_SObject_Id__c.field-meta.xml
<CustomField>
    <fullName>Related_SObject_Id__c</fullName>
    <label>Related SObject Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>