force-app/main/default/objects/Comment__c/fields/Related_SObject_Key__c.field-meta.xml
<CustomField>
    <fullName>Related_SObject_Key__c</fullName>
    <label>Related SObject Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>