force-app/main/default/objects/Comment__c/fields/TaskToAcornString__c.field-meta.xml
<CustomField>
    <fullName>TaskToAcornString__c</fullName>
    <description>Holds the value of the fields concatenated for completed task</description>
    <label>TaskToAcornString</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>