force-app/main/default/objects/Comment__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Captures the object the comment is related to.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Task</fullName>
            </value>
            <value>
                <fullName>Case</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>