force-app/main/default/objects/Comment__c/fields/Workflow_Action__c.field-meta.xml
<CustomField>
    <fullName>Workflow_Action__c</fullName>
    <description>Source System Acorn</description>
    <label>Action</label>
    <length>50</length>
    <type>Text</type>
</CustomField>