force-app/main/default/objects/Comment__c/fields/Workflow_Log_Id__c.field-meta.xml
<CustomField>
    <fullName>Workflow_Log_Id__c</fullName>
    <description>Source System Acorn</description>
    <label>Workflow_Log_Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>