force-app/main/default/objects/Comment__c/fields/Workflow_TeamUser__c.field-meta.xml
<CustomField>
    <fullName>Workflow_TeamUser__c</fullName>
    <description>Source System Acorn</description>
    <label>Team/User</label>
    <length>50</length>
    <type>Text</type>
</CustomField>