force-app/main/default/objects/Comment__c/recordTypes/Acorn_Ticket_Comment.recordType-meta.xml
<RecordType>
    <fullName>Acorn_Ticket_Comment</fullName>
    <active>true</active>
    <description>Holds Acorn Ticket Comment records</description>
    <label>Acorn Ticket Comment</label>
</RecordType>