force-app/main/default/objects/Comment__c/recordTypes/Task_Details_to_Acorn.recordType-meta.xml
<RecordType>
    <fullName>Task_Details_to_Acorn</fullName>
    <active>true</active>
    <description>This record type holds the records that needs to be sent to Acorn after task completion</description>
    <label>Task Details to Acorn</label>
</RecordType>