force-app/main/default/objects/Comment__c/listViews/Comment_View.listView-meta.xml
<ListView>
    <fullName>Comment_View</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Comment View</label>
</ListView>